Fix breakpoint overlap for mobile menu

--- a/styles.css
+++ b/styles.css
@@ -630,7 +630,7 @@ img {
     }
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
     .nav {
         height: calc(var(--header-height) + 1.5rem);
     }
